# range-v3.5

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  Version.cmake  vcpkg.json  version.hpp.in
.github/workflows/: range-v3-ci.yml
cmake/: EARanges-config.cmake  EARanges_diagnostics.cmake  EARanges_env.cmake  EARanges_flags.cmake  EARanges_options.cmake  GoogleBenchmark.cmake.in  GoogleTest.cmake.in
doc/: CMakeLists.txt  Doxyfile.in
example/: CMakeLists.txt  accumulate_ints.cpp  any_all_none_of.cpp  calendar.cpp  comprehension_conversion.cpp  comprehensions.cpp  count.cpp  count_if.cpp  filter_transform.cpp  find.cpp  for_each_assoc.cpp  for_each_sequence.cpp  hello.cpp  is_sorted.cpp  sort_unique.cpp
example/view/: CMakeLists.txt  filter.cpp  ints.cpp  transform.cpp
extra/: algorithm.h  heap.h  iterator.h  random.h  random_number_generator.h  string.h  tuple.h
extra/internal/: config.h  memory_base.h  tuple_fwd_decls.h
extra/internal/random/: discrete-distribution.hpp
first-party/EASTL/: .gitignore
include/EARanges/: action.hpp  algorithm.hpp  all.hpp  compare.hpp  core.hpp  functional.hpp  iterator.hpp  numeric.hpp  range.hpp  range_for.hpp  range_fwd.hpp  utility.hpp  version.hpp  view.hpp
include/EARanges/action/: action.hpp  adjacent_remove_if.hpp  concepts.hpp  drop.hpp  drop_while.hpp  erase.hpp  insert.hpp  join.hpp  push_back.hpp  push_front.hpp  remove.hpp  remove_if.hpp  reverse.hpp  shuffle.hpp  slice.hpp  sort.hpp  split.hpp  split_when.hpp  stable_sort.hpp  stride.hpp  take.hpp  take_while.hpp  transform.hpp  unique.hpp  unstable_remove_if.hpp
include/EARanges/algorithm/: adjacent_find.hpp  adjacent_remove_if.hpp  all_of.hpp  any_of.hpp  binary_search.hpp  clamp.hpp  contains.hpp  contains_subrange.hpp  copy.hpp  copy_backward.hpp  copy_if.hpp  copy_n.hpp  count.hpp  count_if.hpp  ends_with.hpp  equal.hpp  equal_range.hpp  fill.hpp  fill_n.hpp  find.hpp  find_end.hpp  find_first_of.hpp  find_if.hpp  find_if_not.hpp  fold.hpp  fold_left.hpp  fold_right.hpp  for_each.hpp  for_each_n.hpp  generate.hpp  generate_n.hpp  heap_algorithm.hpp  inplace_merge.hpp  is_partitioned.hpp  is_sorted.hpp  is_sorted_until.hpp  lexicographical_compare.hpp  lower_bound.hpp  max.hpp  max_element.hpp  (+44 more)
include/EARanges/concepts/: compare.hpp  concepts.hpp  swap.hpp  type_traits.hpp
include/EARanges/detail/: adl_get.hpp  config.hpp  epilogue.hpp  prologue.hpp  range_access.hpp  satisfy_boost_range.hpp  variant.hpp  with_braced_init_args.hpp
include/EARanges/functional/: arithmetic.hpp  bind.hpp  bind_back.hpp  comparisons.hpp  compose.hpp  concepts.hpp  identity.hpp  indirect.hpp  invoke.hpp  not_fn.hpp  on.hpp  overload.hpp  pipeable.hpp  reference_wrapper.hpp
include/EARanges/iterator/: access.hpp  basic_iterator.hpp  common_iterator.hpp  concepts.hpp  counted_iterator.hpp  default_sentinel.hpp  diffmax_t.hpp  insert_iterators.hpp  move_iterators.hpp  operations.hpp  reverse_iterator.hpp  stream_iterators.hpp  traits.hpp  unreachable_sentinel.hpp
include/EARanges/meta/: meta.hpp  meta_fwd.hpp
include/EARanges/numeric/: accumulate.hpp  adjacent_difference.hpp  inner_product.hpp  iota.hpp  partial_sum.hpp
include/EARanges/range/: access.hpp  concepts.hpp  conversion.hpp  dangling.hpp  operations.hpp  primitives.hpp  traits.hpp
include/EARanges/std/: iterator
perf/: CMakeLists.txt  counted_insertion_sort.cpp  range_conversion.cpp  sort_patterns.cpp
test/: CMakeLists.txt  array.hpp  bug-guard.cpp  bug1322.cpp  bug1335.cpp  bug1633.cpp  bug1729.cpp  bug474.cpp  bug566.cpp  config.cpp  constexpr_core.cpp  debug_view.hpp  eastl_utils.h  multiple1.cpp  multiple2.cpp  simple_test.hpp  test_iterators.hpp  test_utils.hpp
test/action/: CMakeLists.txt  adjacent_remove_if.cpp  cont_concepts.cpp  drop.cpp  drop_while.cpp  insert.cpp  join.cpp  push_back.cpp  push_front.cpp  remove.cpp  remove_if.cpp  reverse.cpp  shuffle.cpp  slice.cpp  sort.cpp  split.cpp  stable_sort.cpp  stride.cpp  take.cpp  take_while.cpp  transform.cpp  unique.cpp  unstable_remove_if.cpp
test/algorithm/: CMakeLists.txt  adjacent_find.cpp  adjacent_remove_if.cpp  all_of.cpp  any_of.cpp  binary_search.cpp  contains.cpp  contains_subrange.cpp  copy.cpp  copy_backward.cpp  copy_if.cpp  copy_n.cpp  count.cpp  count_if.cpp  ends_with.cpp  equal.cpp  equal_range.cpp  fill.cpp  fill_n.cpp  find.cpp  find_end.cpp  find_first_of.cpp  find_if.cpp  find_if_not.cpp  fold.cpp  for_each.cpp  for_each_n.cpp  generate.cpp  generate_n.cpp  includes.cpp  inplace_merge.cpp  is_heap.hpp  is_heap_until.hpp  is_partitioned.cpp  is_permutation.cpp  is_sorted.cpp  is_sorted_until.cpp  lexicographical_compare.cpp  lower_bound.cpp  make_heap.cpp  (+54 more)
test/experimental/utility/: CMakeLists.txt  generator.cpp
test/experimental/view/: CMakeLists.txt  shared.cpp
test/functional/: CMakeLists.txt  bind_back.cpp  on.cpp
test/iterator/: CMakeLists.txt  basic_iterator.cpp  common_iterator.cpp  counted_iterator.cpp  diffmax_t.cpp  iterator.cpp  reverse_iterator.cpp  unformatted_ostream_iterator.cpp
test/numeric/: CMakeLists.txt  accumulate.cpp  adjacent_difference.cpp  inner_product.cpp  iota.cpp  partial_sum.cpp
test/range/: CMakeLists.txt  access.cpp  conversion.cpp  index.cpp  operations.cpp
test/utility/: CMakeLists.txt  box.cpp  common_type.cpp  compare.cpp  concepts.cpp  functional.cpp  meta.cpp  scope_exit.cpp  semiregular_box.cpp  swap.cpp  variant.cpp
test/view/: CMakeLists.txt  adaptor.cpp  addressof.cpp  adjacent_remove_if.cpp  all.cpp  any_view.cpp  cache1.cpp  cartesian_product.cpp  chunk.cpp  chunk_by.cpp  common.cpp  concat.cpp  const.cpp  conversion.cpp  counted.cpp  cycle.cpp  delimit.cpp  drop.cpp  drop_exactly.cpp  drop_last.cpp  drop_while.cpp  enumerate.cpp  exclusive_scan.cpp  facade.cpp  generate.cpp  generate_n.cpp  getlines.cpp  group_by.cpp  indirect.cpp  intersperse.cpp  iota.cpp  istream.cpp  iterator_range.cpp  join.cpp  keys_value.cpp  linear_distribute.cpp  move.cpp  partial_sum.cpp  partial_sum_depr.cpp  remove.cpp  (+27 more)
test_package/: CMakeLists.txt  example.cpp
(+407 files in other folders)
