include(../cmake/EARanges_diagnostics.cmake)

set(CMAKE_FOLDER "test")

add_subdirectory(action)
add_subdirectory(algorithm)
add_subdirectory(iterator)
add_subdirectory(functional)
add_subdirectory(numeric)
add_subdirectory(range)
add_subdirectory(utility)
add_subdirectory(view)
add_subdirectory(experimental)

EARanges_add_test(test.constexpr_core constexpr_core constexpr_core.cpp)
EARanges_add_test(test.multiple multiple multiple1.cpp multiple2.cpp)
EARanges_add_test(test.bug474 bug474 bug474.cpp)
EARanges_add_test(test.bug566 bug566 bug566.cpp)
EARanges_add_test(test.bug1322 bug1322 bug1322.cpp)
EARanges_add_test(test.bug1335 bug1335 bug1335.cpp)
EARanges_add_test(test.bug1729 bug1729 bug1729.cpp)
EARanges_add_test(test.bug-guard bug-guard bug-guard.cpp)
